<?xml version="1.0"?>
<package>
  <name>tcp_serial_redirect</name>
  <version>0.0.0</version>
  <description>The tcp_serial_redirect package</description>

  <maintainer email="des0ps@todo.todo">des0ps</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>